include/codata_constants_2018.h

ADD_IMPORT extern const double DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double DEUTERON_MASS_IN_U_2018;/**< u */
ADD_IMPORT extern const double U_DEUTERON_MASS_IN_U_2018;/**< u */
ADD_IMPORT extern const double DEUTERON_MOLAR_MASS_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double U_DEUTERON_MOLAR_MASS_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double DEUTERON_NEUTRON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_NEUTRON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_PROTON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_PROTON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_PROTON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_PROTON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_RELATIVE_ATOMIC_MASS_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_RELATIVE_ATOMIC_MASS_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_RMS_CHARGE_RADIUS_2018;/**< m */
ADD_IMPORT extern const double U_DEUTERON_RMS_CHARGE_RADIUS_2018;/**< m */
ADD_IMPORT extern const double ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018;/**< C kg^-1 */
ADD_IMPORT extern const double U_ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018;/**< C kg^-1 */
ADD_IMPORT extern const double ELECTRON_DEUTERON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_DEUTERON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_DEUTERON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_DEUTERON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_G_FACTOR_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_G_FACTOR_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_GYROMAG__RATIO_2018;/**< s^-1 T^-1 */
ADD_IMPORT extern const double U_ELECTRON_GYROMAG__RATIO_2018;/**< s^-1 T^-1 */
ADD_IMPORT extern const double ELECTRON_GYROMAG__RATIO_IN_MHZ_T_2018;/**< MHz T^-1 */
ADD_IMPORT extern const double U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T_2018;/**< MHz T^-1 */
ADD_IMPORT extern const double ELECTRON_HELION_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_HELION_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_MAG__MOM_2018;/**< J T^-1 */
ADD_IMPORT extern const double U_ELECTRON_MAG__MOM_2018;/**< J T^-1 */
ADD_IMPORT extern const double ELECTRON_MAG__MOM__ANOMALY_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MAG__MOM__ANOMALY_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_MASS_2018;/**< kg */
ADD_IMPORT extern const double U_ELECTRON_MASS_2018;/**< kg */
ADD_IMPORT extern const double ELECTRON_MASS_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double U_ELECTRON_MASS_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double ELECTRON_MASS_IN_U_2018;/**< u */
ADD_IMPORT extern const double U_ELECTRON_MASS_IN_U_2018;/**< u */
ADD_IMPORT extern const double ELECTRON_MOLAR_MASS_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double U_ELECTRON_MOLAR_MASS_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double ELECTRON_MUON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MUON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double ELECTRON_MUON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MUON_MASS_RATIO_2018;/**<  */