src/codata_constants_2018.f90


real(real64), parameter, public :: DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018=1875.61294257d0 !! MeV
real(real64), parameter, public :: U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018=0.00000057d0 !! MeV

real(c_double), protected, public, bind(C,name="DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018"):: &
capi_076_2018=DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018") :: &
capi_U_076_2018=U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018

real(real64), parameter, public :: DEUTERON_MASS_IN_U_2018=2.013553212745d0 !! u
real(real64), parameter, public :: U_DEUTERON_MASS_IN_U_2018=0.000000000040d0 !! u

real(c_double), protected, public, bind(C,name="DEUTERON_MASS_IN_U_2018"):: &
capi_077_2018=DEUTERON_MASS_IN_U_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_MASS_IN_U_2018") :: &
capi_U_077_2018=U_DEUTERON_MASS_IN_U_2018

real(real64), parameter, public :: DEUTERON_MOLAR_MASS_2018=2.01355321205d-3 !! kg mol^-1
real(real64), parameter, public :: U_DEUTERON_MOLAR_MASS_2018=0.00000000061d-3 !! kg mol^-1

real(c_double), protected, public, bind(C,name="DEUTERON_MOLAR_MASS_2018"):: &
capi_078_2018=DEUTERON_MOLAR_MASS_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_MOLAR_MASS_2018") :: &
capi_U_078_2018=U_DEUTERON_MOLAR_MASS_2018

real(real64), parameter, public :: DEUTERON_NEUTRON_MAG__MOM__RATIO_2018=-0.44820653d0 !! 
real(real64), parameter, public :: U_DEUTERON_NEUTRON_MAG__MOM__RATIO_2018=0.00000011d0 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_NEUTRON_MAG__MOM__RATIO_2018"):: &
capi_079_2018=DEUTERON_NEUTRON_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_NEUTRON_MAG__MOM__RATIO_2018") :: &
capi_U_079_2018=U_DEUTERON_NEUTRON_MAG__MOM__RATIO_2018

real(real64), parameter, public :: DEUTERON_PROTON_MAG__MOM__RATIO_2018=0.30701220939d0 !! 
real(real64), parameter, public :: U_DEUTERON_PROTON_MAG__MOM__RATIO_2018=0.00000000079d0 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_PROTON_MAG__MOM__RATIO_2018"):: &
capi_080_2018=DEUTERON_PROTON_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_PROTON_MAG__MOM__RATIO_2018") :: &
capi_U_080_2018=U_DEUTERON_PROTON_MAG__MOM__RATIO_2018

real(real64), parameter, public :: DEUTERON_PROTON_MASS_RATIO_2018=1.99900750139d0 !! 
real(real64), parameter, public :: U_DEUTERON_PROTON_MASS_RATIO_2018=0.00000000011d0 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_PROTON_MASS_RATIO_2018"):: &
capi_081_2018=DEUTERON_PROTON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_PROTON_MASS_RATIO_2018") :: &
capi_U_081_2018=U_DEUTERON_PROTON_MASS_RATIO_2018

real(real64), parameter, public :: DEUTERON_RELATIVE_ATOMIC_MASS_2018=2.013553212745d0 !! 
real(real64), parameter, public :: U_DEUTERON_RELATIVE_ATOMIC_MASS_2018=0.000000000040d0 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_RELATIVE_ATOMIC_MASS_2018"):: &
capi_082_2018=DEUTERON_RELATIVE_ATOMIC_MASS_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_RELATIVE_ATOMIC_MASS_2018") :: &
capi_U_082_2018=U_DEUTERON_RELATIVE_ATOMIC_MASS_2018

real(real64), parameter, public :: DEUTERON_RMS_CHARGE_RADIUS_2018=2.12799d-15 !! m
real(real64), parameter, public :: U_DEUTERON_RMS_CHARGE_RADIUS_2018=0.00074d-15 !! m

real(c_double), protected, public, bind(C,name="DEUTERON_RMS_CHARGE_RADIUS_2018"):: &
capi_083_2018=DEUTERON_RMS_CHARGE_RADIUS_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_RMS_CHARGE_RADIUS_2018") :: &
capi_U_083_2018=U_DEUTERON_RMS_CHARGE_RADIUS_2018

real(real64), parameter, public :: ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018=-1.75882001076d11 !! C kg^-1
real(real64), parameter, public :: U_ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018=0.00000000053d11 !! C kg^-1

real(c_double), protected, public, bind(C,name="ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018"):: &
capi_084_2018=ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018") :: &
capi_U_084_2018=U_ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018

real(real64), parameter, public :: ELECTRON_DEUTERON_MAG__MOM__RATIO_2018=-2143.9234915d0 !! 
real(real64), parameter, public :: U_ELECTRON_DEUTERON_MAG__MOM__RATIO_2018=0.0000056d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_DEUTERON_MAG__MOM__RATIO_2018"):: &
capi_085_2018=ELECTRON_DEUTERON_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_DEUTERON_MAG__MOM__RATIO_2018") :: &
capi_U_085_2018=U_ELECTRON_DEUTERON_MAG__MOM__RATIO_2018

real(real64), parameter, public :: ELECTRON_DEUTERON_MASS_RATIO_2018=2.724437107462d-4 !! 
real(real64), parameter, public :: U_ELECTRON_DEUTERON_MASS_RATIO_2018=0.000000000096d-4 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_DEUTERON_MASS_RATIO_2018"):: &
capi_086_2018=ELECTRON_DEUTERON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_DEUTERON_MASS_RATIO_2018") :: &
capi_U_086_2018=U_ELECTRON_DEUTERON_MASS_RATIO_2018

real(real64), parameter, public :: ELECTRON_G_FACTOR_2018=-2.00231930436256d0 !! 
real(real64), parameter, public :: U_ELECTRON_G_FACTOR_2018=0.00000000000035d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_G_FACTOR_2018"):: &
capi_087_2018=ELECTRON_G_FACTOR_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_G_FACTOR_2018") :: &
capi_U_087_2018=U_ELECTRON_G_FACTOR_2018

real(real64), parameter, public :: ELECTRON_GYROMAG__RATIO_2018=1.76085963023d11 !! s^-1 T^-1
real(real64), parameter, public :: U_ELECTRON_GYROMAG__RATIO_2018=0.00000000053d11 !! s^-1 T^-1

real(c_double), protected, public, bind(C,name="ELECTRON_GYROMAG__RATIO_2018"):: &
capi_088_2018=ELECTRON_GYROMAG__RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_GYROMAG__RATIO_2018") :: &
capi_U_088_2018=U_ELECTRON_GYROMAG__RATIO_2018

real(real64), parameter, public :: ELECTRON_GYROMAG__RATIO_IN_MHZ_T_2018=28024.9514242d0 !! MHz T^-1
real(real64), parameter, public :: U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T_2018=0.0000085d0 !! MHz T^-1

real(c_double), protected, public, bind(C,name="ELECTRON_GYROMAG__RATIO_IN_MHZ_T_2018"):: &
capi_089_2018=ELECTRON_GYROMAG__RATIO_IN_MHZ_T_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T_2018") :: &
capi_U_089_2018=U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T_2018

real(real64), parameter, public :: ELECTRON_HELION_MASS_RATIO_2018=1.819543074573d-4 !! 
real(real64), parameter, public :: U_ELECTRON_HELION_MASS_RATIO_2018=0.000000000079d-4 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_HELION_MASS_RATIO_2018"):: &
capi_090_2018=ELECTRON_HELION_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_HELION_MASS_RATIO_2018") :: &
capi_U_090_2018=U_ELECTRON_HELION_MASS_RATIO_2018

real(real64), parameter, public :: ELECTRON_MAG__MOM_2018=-9.2847647043d-24 !! J T^-1
real(real64), parameter, public :: U_ELECTRON_MAG__MOM_2018=0.0000000028d-24 !! J T^-1

real(c_double), protected, public, bind(C,name="ELECTRON_MAG__MOM_2018"):: &
capi_091_2018=ELECTRON_MAG__MOM_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MAG__MOM_2018") :: &
capi_U_091_2018=U_ELECTRON_MAG__MOM_2018

real(real64), parameter, public :: ELECTRON_MAG__MOM__ANOMALY_2018=1.15965218128d-3 !! 
real(real64), parameter, public :: U_ELECTRON_MAG__MOM__ANOMALY_2018=0.00000000018d-3 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_MAG__MOM__ANOMALY_2018"):: &
capi_092_2018=ELECTRON_MAG__MOM__ANOMALY_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MAG__MOM__ANOMALY_2018") :: &
capi_U_092_2018=U_ELECTRON_MAG__MOM__ANOMALY_2018

real(real64), parameter, public :: ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018=-1.00115965218128d0 !! 
real(real64), parameter, public :: U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018=0.00000000000018d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018"):: &
capi_093_2018=ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018") :: &
capi_U_093_2018=U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018

real(real64), parameter, public :: ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018=-1838.28197188d0 !! 
real(real64), parameter, public :: U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018=0.00000011d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018"):: &
capi_094_2018=ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018") :: &
capi_U_094_2018=U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018

real(real64), parameter, public :: ELECTRON_MASS_2018=9.1093837015d-31 !! kg
real(real64), parameter, public :: U_ELECTRON_MASS_2018=0.0000000028d-31 !! kg

real(c_double), protected, public, bind(C,name="ELECTRON_MASS_2018"):: &
capi_095_2018=ELECTRON_MASS_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MASS_2018") :: &
capi_U_095_2018=U_ELECTRON_MASS_2018

real(real64), parameter, public :: ELECTRON_MASS_ENERGY_EQUIVALENT_2018=8.1871057769d-14 !! J
real(real64), parameter, public :: U_ELECTRON_MASS_ENERGY_EQUIVALENT_2018=0.0000000025d-14 !! J

real(c_double), protected, public, bind(C,name="ELECTRON_MASS_ENERGY_EQUIVALENT_2018"):: &
capi_096_2018=ELECTRON_MASS_ENERGY_EQUIVALENT_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MASS_ENERGY_EQUIVALENT_2018") :: &
capi_U_096_2018=U_ELECTRON_MASS_ENERGY_EQUIVALENT_2018

real(real64), parameter, public :: ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018=0.51099895000d0 !! MeV
real(real64), parameter, public :: U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018=0.00000000015d0 !! MeV

real(c_double), protected, public, bind(C,name="ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018"):: &
capi_097_2018=ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018") :: &
capi_U_097_2018=U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV_2018

real(real64), parameter, public :: ELECTRON_MASS_IN_U_2018=5.48579909065d-4 !! u
real(real64), parameter, public :: U_ELECTRON_MASS_IN_U_2018=0.00000000016d-4 !! u

real(c_double), protected, public, bind(C,name="ELECTRON_MASS_IN_U_2018"):: &
capi_098_2018=ELECTRON_MASS_IN_U_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MASS_IN_U_2018") :: &
capi_U_098_2018=U_ELECTRON_MASS_IN_U_2018

real(real64), parameter, public :: ELECTRON_MOLAR_MASS_2018=5.4857990888d-7 !! kg mol^-1
real(real64), parameter, public :: U_ELECTRON_MOLAR_MASS_2018=0.0000000017d-7 !! kg mol^-1

real(c_double), protected, public, bind(C,name="ELECTRON_MOLAR_MASS_2018"):: &
capi_099_2018=ELECTRON_MOLAR_MASS_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MOLAR_MASS_2018") :: &
capi_U_099_2018=U_ELECTRON_MOLAR_MASS_2018

real(real64), parameter, public :: ELECTRON_MUON_MAG__MOM__RATIO_2018=206.7669883d0 !! 
real(real64), parameter, public :: U_ELECTRON_MUON_MAG__MOM__RATIO_2018=0.0000046d0 !! 

real(c_double), protected, public, bind(C,name="ELECTRON_MUON_MAG__MOM__RATIO_2018"):: &
capi_100_2018=ELECTRON_MUON_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_ELECTRON_MUON_MAG__MOM__RATIO_2018") :: &
capi_U_100_2018=U_ELECTRON_MUON_MAG__MOM__RATIO_2018

real(real64), parameter, public :: ELECTRON_MUON_MASS_RATIO_2018=4.83633169d-3 !! 
real(real64), parameter, public :: U_ELECTRON_MUON_MASS_RATIO_2018=0.00000011d-3 !! 
